[gd_scene load_steps=4 format=3 uid="uid://u2goc8i0qnmf"]

[ext_resource type="PackedScene" uid="uid://s0vsemqwnofk" path="res://character/ghost/scene/ghost_niu_tou.tscn" id="1_pgy0d"]
[ext_resource type="PackedScene" uid="uid://d3xtwo83t57ri" path="res://character/ghost/scene/ghost_normal.tscn" id="1_q61mu"]
[ext_resource type="Script" path="res://test_ui.gd" id="4_gxjma"]

[node name="Test" type="Node2D"]

[node name="GhostNormal" parent="." instance=ExtResource("1_q61mu")]
position = Vector2(305, 205)

[node name="GhostNiuTou" parent="." instance=ExtResource("1_pgy0d")]
position = Vector2(300, 534)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("4_gxjma")

[node name="Ask" type="Button" parent="CanvasLayer"]
offset_left = 705.0
offset_top = 541.0
offset_right = 777.0
offset_bottom = 572.0
text = "审问"

[node name="Next" type="Button" parent="CanvasLayer"]
offset_left = 930.0
offset_top = 539.0
offset_right = 986.0
offset_bottom = 570.0
text = "下一个"

[node name="Judge" type="Button" parent="CanvasLayer"]
offset_left = 828.0
offset_top = 540.0
offset_right = 884.0
offset_bottom = 571.0
text = "审判"

[node name="EventPosition" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 0
grow_vertical = 2

[connection signal="pressed" from="CanvasLayer/Ask" to="CanvasLayer" method="_on_ask_pressed"]
[connection signal="pressed" from="CanvasLayer/Next" to="CanvasLayer" method="_on_next_pressed"]
[connection signal="pressed" from="CanvasLayer/Judge" to="CanvasLayer" method="_on_judge_pressed"]
